--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dangel Motors</title>
-    <link rel="shortcut icon" href="./imagenes/favicon/favicon.ico" type="image/x-icon"> <!-- logo favicon -->
-    <link rel="stylesheet" href="/css/style.css"> <!-- link a css -->
+    <link rel="shortcut icon" href="imagenes/favicon/favicon.ico" type="image/x-icon"> <!-- logo favicon -->
+    <link rel="stylesheet" href="css/style.css"> <!-- link a css -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>  <!-- libreria de íconos -->
-    <script defer src="/js/main.js"></script>
+    <script defer src="js/main.js"></script>
 </head>
 <body>
     <div id="site" class="site">
@@ -16,7 +16,7 @@
             <nav class="nav">
                     <!-- logo -->
                     <a href="#inicio" class="logo">
-                        <img src="/imagenes/logonavbar.webp" alt="logo dangel motors">
+                        <img src="imagenes/logonavbar.webp" alt="logo dangel motors">
                     </a>
                     <!-- lista de navegación -->
                     <ul class="navbar">
@@ -40,9 +40,9 @@
             </div>
         </header>
         <main class="inicio" id="inicio">
-            <img src="/imagenes/background-jeep.webp" alt="" class="image-slide active">
-            <img src="/imagenes/background-ram.webp" alt="" class="image-slide">
-            <img src="/imagenes/background-raptor.webp" alt="" class="image-slide">
+            <img src="imagenes/background-jeep.webp" alt="" class="image-slide active">
+            <img src="imagenes/background-ram.webp" alt="" class="image-slide">
+            <img src="imagenes/background-raptor.webp" alt="" class="image-slide">
             <div class="content active">
                 <h1>JEEP WRANGLER</h1>
                 <p>Su diseño icónico y su capacidad todoterreno te invitan a aventurarte más allá de los caminos trillados. Con motores potentes y tracción en las cuatro ruedas legendaria, la Jeep Wrangler te ofrece la libertad de conquistar cualquier terreno. Descubre la emoción de la aventura al aire libre con la Jeep Wrangler.</p>
@@ -73,7 +73,7 @@
             <div class="text">
               <h2>Bienvenidos a <span class="color">Dangel Motors </span> </h2>
                 <div class="img">
-                    <img src="./imagenes/aut_varios.webp" alt="autos" class="center-image">
+                    <img src="imagenes/aut_varios.webp" alt="autos" class="center-image">
                 </div>
                 <div class="parrafo"><p>Dangel Motors es una empresa familiar que nace en Diciembre del año 2019, con una idea fundamental: “Hacerlo mejor, o no hacerlo”. En nuestros inicios como concesionario digital y desde Abril de 2023 localizados en nuestro salón comercial de Avenida Libertador Norte 102.
                     Nuestra máxima fundamental apuesta a contribuir a la transparencia y seriedad, brindándole a cada uno de nuestros clientes la confianza necesaria para abordar con seguridad una etapa que nos apasiona, que es acceder a nuestro auto deseado.
@@ -109,23 +109,23 @@
 		<div class="container">
             <div class="card-section">
                 <div class="card">
-                        <img src="./imagenes/audi-q3.webp" alt="">
+                        <img src="imagenes/audi-q3.webp" alt="">
                         <h3>Audi Q3</h3>
                 </div>
                 <div class="card">
-                        <img src="./imagenes/mercedes-clc.webp" alt="">
+                        <img src="imagenes/mercedes-clc.webp" alt="">
                         <h3>Mercedes CLC</h3>
                 </div>
                 <div class="card">
-                        <img src="./imagenes/ram1500.webp" alt="">
+                        <img src="imagenes/ram1500.webp" alt="">
                         <h3>Ram 1500</h3>
                 </div>
                 <div class="card">
-                        <img src="./imagenes/mercedes-gle.webp" alt="">
+                        <img src="imagenes/mercedes-gle.webp" alt="">
                         <h3>Mercedes GLE</h3>
                 </div>
                 <div class="card">
-                        <img src="./imagenes/toyota-hilux.webp" alt="">
+                        <img src="imagenes/toyota-hilux.webp" alt="">
                         <h3>Toyota Hilux</h3>
                 </div>
                 <div class="card">
@@ -133,11 +133,11 @@
                         <h3>Dodge Ram</h3>
                 </div>
                 <div class="card">
-                        <img src="./imagenes/fiat-500x.webp" alt="">
+                        <img src="imagenes/fiat-500x.webp" alt="">
                         <h3>Fiat 500x</h3>
                 </div>
                 <div class="card">
-                        <img src="./imagenes/chevrolet-montana.webp" alt="">
+                        <img src="imagenes/chevrolet-montana.webp" alt="">
                         <h3>Chevrolet Montana</h3>
                 </div>
             </div>
